@@ -45,9 +45,8 @@ class LinfoNcurses {
 
 		// We obviously need this
 		if (!extension_loaded('ncurses')) {
-			echo "ncurses extension not loaded\n";
 			$this->loaded = false;
-			exit(1);
+			throw new LinfoFatalException('ncurses extension not loaded');
 		}
 
 		// Start ncurses
@@ -77,7 +76,7 @@ class LinfoNcurses {
 		$fullscreen = ncurses_newwin(0, 0, 0, 0);
 		ncurses_wrefresh($fullscreen);
 		ncurses_getmaxyx ($fullscreen, $x, $y);
-		ncurses_mvwaddstr($fullscreen, 0, 0, 'Generated by '.AppName.' ('.VERSION.') on '.date('m/d/Y @ h:i:s A (T)'));
+		ncurses_mvwaddstr($fullscreen, 0, 0, 'Generated by '.$this->linfo->getAppName().' ('.$this->linfo->getVersion().') on '.date('m/d/Y @ h:i:s A (T)'));
 		ncurses_wrefresh($fullscreen);
 		$this->_max_dims = array($x, $y);
 
@@ -130,7 +129,7 @@ class LinfoNcurses {
 			ncurses_napms(1000);
 
 			// Call ourselves
-			$this->work();
+			$this->draw();
 		}
 	}
 
