@@ -79,5 +79,11 @@ v1.11 5/2/2014
  - Virtualization detection for Linux
  - CPU Usage reporting for Linux
 
-v1.?? ?/??/20??
+v?.?? ?/??/20??
+ - Major refactor: no global vars; easier to use
+   simply as a library by third party apps
  - added utorrent web ui parsing extension
+ - proper fqdn resolution on linux using /etc/hosts
+   if version reported by sysctl isn't fully qualified
+ - all inline exit's converted to exceptions so this can be used as a library
+   without fear of killing whichever app uses it
